--- a/charts/esis/values.e2e.yml
+++ b/charts/esis/values.e2e.yml
@@ -1,6 +1,6 @@
 # env config
-env: stage
-hostName: movietalk.stage.mbegley.net
+env: e2e
+hostName: esis.e2e.mbegley.net
 # Images
 uiImageTag: 1.2.0
 apiImageTag: 1.0.0
