--- a/charts/esis/values.prod.yml
+++ b/charts/esis/values.prod.yml
@@ -1,6 +1,6 @@
 # env config
 env: prod
-hostName: movietalk-next.mbegley.net
+hostName: esis.mbegley.net
 # Images
 uiImageTag: 1.1.5
 apiImageTag: 1.0.0
